fixed invisible link

--- a/app/assets/stylesheets/text.css.sass
+++ b/app/assets/stylesheets/text.css.sass
@@ -47,7 +47,7 @@ h6
   margin: 15px 0px
 
 a
-  color: $text
+  color: $link
   text-decoration: none
   &:hover
     text-decoration: underline
